--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-   "name": "angular",
-   "version": "1.0.0",
-   "devDependencies": {
-     "express": "^4.13.4"
-   }
+  "name": "angular",
+  "version": "1.0.0",
+  "devDependencies": {
+    "express": "^4.13.4",
+    "karma": "^0.13.22"
+  }
 }
