--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
    "name": "angular",
    "version": "1.0.0",
    "devDependencies": {
-     "express": "^4.13.4"
-   }
+     "express": "^4.13.4",
+     "live-server": "^0.9.2"
+   },
+   "scripts": {
+    "live": "live-server",
+    "start": "npm run live"
+  }  
 }
